--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,5 +106,6 @@
         "typeindex": "cpp",
         "valarray": "cpp",
         "__verbose_abort": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": true
 }
