testing store data

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,6 +33,19 @@
                 }
             ],
             "preLaunchTask": "Windows C/C++: g++.exe build active file"
+        },
+        {
+            "name": "C/C++: clang++ build and debug active file",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${fileDirname}/${fileBasenameNoExtension}",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+            "preLaunchTask": "C/C++: clang++ build active file"
         }
     ],
     "version": "2.0.0"
