--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -35,7 +35,9 @@
                 "-fansi-escape-codes",
                 "-g",
                 "${file}",
-                "${fileDirname}/src/*cpp",
+                "${fileDirname}/src/entity/*cpp",
+                "${fileDirname}/src/control/*.cpp",
+                "-I${fileDirname}/headers",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
