--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
                 "${file}",
                 "${fileDirname}\\src\\entity\\*.cpp",
                 "${fileDirname}\\src\\control\\*.cpp",
+                "${fileDirname}\\src\\boundary\\*.cpp",
                 "-I${fileDirname}\\headers",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
