--- a/main.dSYM/Contents/Resources/Relocations/aarch64/main.yml
+++ b/main.dSYM/Contents/Resources/Relocations/aarch64/main.yml
@@ -2,25 +2,25 @@
 triple:          'arm64-apple-darwin'
 binary-path:     '/Users/jb/GitHubRepositories/CS3321GroupProject/main'
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100001250, symSize: 0x6D8 }
-  - { offsetInCU: 0x30D1, offset: 0x30D1, size: 0x8, addend: 0x0, symName: __ZNSt3__119__debug_db_insert_cB7v160006INS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEEEEvPT_, symObjAddr: 0x940, symBinAddr: 0x100001B90, symSize: 0x10 }
-  - { offsetInCU: 0x3102, offset: 0x3102, size: 0x8, addend: 0x0, symName: __ZNSt3__118__constexpr_strlenB7v160006EPKc, symObjAddr: 0xA0C, symBinAddr: 0x100001C5C, symSize: 0x24 }
-  - { offsetInCU: 0x52F3, offset: 0x52F3, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100001250, symSize: 0x6D8 }
-  - { offsetInCU: 0x54FB, offset: 0x54FB, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC1B7v160006IDnEEPKc, symObjAddr: 0x6D8, symBinAddr: 0x100001928, symSize: 0x34 }
-  - { offsetInCU: 0x5942, offset: 0x5942, size: 0x8, addend: 0x0, symName: __ZN7PatientD1Ev, symObjAddr: 0x70C, symBinAddr: 0x10000195C, symSize: 0x2C }
-  - { offsetInCU: 0x596C, offset: 0x596C, size: 0x8, addend: 0x0, symName: __ZN4UserD1Ev, symObjAddr: 0x738, symBinAddr: 0x100001988, symSize: 0x2C }
-  - { offsetInCU: 0x5994, offset: 0x5994, size: 0x8, addend: 0x0, symName: __ZN7PatientD2Ev, symObjAddr: 0x764, symBinAddr: 0x1000019B4, symSize: 0x48 }
-  - { offsetInCU: 0x59BE, offset: 0x59BE, size: 0x8, addend: 0x0, symName: __ZN4UserD2Ev, symObjAddr: 0x7AC, symBinAddr: 0x1000019FC, symSize: 0x64 }
-  - { offsetInCU: 0x59E6, offset: 0x59E6, size: 0x8, addend: 0x0, symName: __ZN7PatientD0Ev, symObjAddr: 0x810, symBinAddr: 0x100001A60, symSize: 0x30 }
-  - { offsetInCU: 0x5A10, offset: 0x5A10, size: 0x8, addend: 0x0, symName: __ZN4UserD0Ev, symObjAddr: 0x840, symBinAddr: 0x100001A90, symSize: 0x30 }
-  - { offsetInCU: 0x5A38, offset: 0x5A38, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC2B7v160006IDnEEPKc, symObjAddr: 0x870, symBinAddr: 0x100001AC0, symSize: 0x60 }
-  - { offsetInCU: 0x5A79, offset: 0x5A79, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC1B7v160006INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x8D0, symBinAddr: 0x100001B20, symSize: 0x3C }
-  - { offsetInCU: 0x5ACF, offset: 0x5ACF, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE6lengthEPKc, symObjAddr: 0x90C, symBinAddr: 0x100001B5C, symSize: 0x34 }
-  - { offsetInCU: 0x5AF1, offset: 0x5AF1, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC2B7v160006INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x950, symBinAddr: 0x100001BA0, symSize: 0x3C }
-  - { offsetInCU: 0x5B47, offset: 0x5B47, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repELi0ELb0EEC2B7v160006ENS_18__default_init_tagE, symObjAddr: 0x98C, symBinAddr: 0x100001BDC, symSize: 0x14 }
-  - { offsetInCU: 0x5B79, offset: 0x5B79, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_9allocatorIcEELi1ELb1EEC2B7v160006ENS_18__default_init_tagE, symObjAddr: 0x9A0, symBinAddr: 0x100001BF0, symSize: 0x2C }
-  - { offsetInCU: 0x5BAB, offset: 0x5BAB, size: 0x8, addend: 0x0, symName: __ZNSt3__19allocatorIcEC2B7v160006Ev, symObjAddr: 0x9CC, symBinAddr: 0x100001C1C, symSize: 0x2C }
-  - { offsetInCU: 0x5BD3, offset: 0x5BD3, size: 0x8, addend: 0x0, symName: __ZNSt3__116__non_trivial_ifILb1ENS_9allocatorIcEEEC2B7v160006Ev, symObjAddr: 0x9F8, symBinAddr: 0x100001C48, symSize: 0x14 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x10000125C, symSize: 0x6CC }
+  - { offsetInCU: 0x30D1, offset: 0x30D1, size: 0x8, addend: 0x0, symName: __ZNSt3__119__debug_db_insert_cB7v160006INS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEEEEvPT_, symObjAddr: 0x934, symBinAddr: 0x100001B90, symSize: 0x10 }
+  - { offsetInCU: 0x3102, offset: 0x3102, size: 0x8, addend: 0x0, symName: __ZNSt3__118__constexpr_strlenB7v160006EPKc, symObjAddr: 0xA00, symBinAddr: 0x100001C5C, symSize: 0x24 }
+  - { offsetInCU: 0x52F3, offset: 0x52F3, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x10000125C, symSize: 0x6CC }
+  - { offsetInCU: 0x54FB, offset: 0x54FB, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC1B7v160006IDnEEPKc, symObjAddr: 0x6CC, symBinAddr: 0x100001928, symSize: 0x34 }
+  - { offsetInCU: 0x5942, offset: 0x5942, size: 0x8, addend: 0x0, symName: __ZN7PatientD1Ev, symObjAddr: 0x700, symBinAddr: 0x10000195C, symSize: 0x2C }
+  - { offsetInCU: 0x596C, offset: 0x596C, size: 0x8, addend: 0x0, symName: __ZN4UserD1Ev, symObjAddr: 0x72C, symBinAddr: 0x100001988, symSize: 0x2C }
+  - { offsetInCU: 0x5994, offset: 0x5994, size: 0x8, addend: 0x0, symName: __ZN7PatientD2Ev, symObjAddr: 0x758, symBinAddr: 0x1000019B4, symSize: 0x48 }
+  - { offsetInCU: 0x59BE, offset: 0x59BE, size: 0x8, addend: 0x0, symName: __ZN4UserD2Ev, symObjAddr: 0x7A0, symBinAddr: 0x1000019FC, symSize: 0x64 }
+  - { offsetInCU: 0x59E6, offset: 0x59E6, size: 0x8, addend: 0x0, symName: __ZN7PatientD0Ev, symObjAddr: 0x804, symBinAddr: 0x100001A60, symSize: 0x30 }
+  - { offsetInCU: 0x5A10, offset: 0x5A10, size: 0x8, addend: 0x0, symName: __ZN4UserD0Ev, symObjAddr: 0x834, symBinAddr: 0x100001A90, symSize: 0x30 }
+  - { offsetInCU: 0x5A38, offset: 0x5A38, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC2B7v160006IDnEEPKc, symObjAddr: 0x864, symBinAddr: 0x100001AC0, symSize: 0x60 }
+  - { offsetInCU: 0x5A79, offset: 0x5A79, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC1B7v160006INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x8C4, symBinAddr: 0x100001B20, symSize: 0x3C }
+  - { offsetInCU: 0x5ACF, offset: 0x5ACF, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE6lengthEPKc, symObjAddr: 0x900, symBinAddr: 0x100001B5C, symSize: 0x34 }
+  - { offsetInCU: 0x5AF1, offset: 0x5AF1, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC2B7v160006INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x944, symBinAddr: 0x100001BA0, symSize: 0x3C }
+  - { offsetInCU: 0x5B47, offset: 0x5B47, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repELi0ELb0EEC2B7v160006ENS_18__default_init_tagE, symObjAddr: 0x980, symBinAddr: 0x100001BDC, symSize: 0x14 }
+  - { offsetInCU: 0x5B79, offset: 0x5B79, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_9allocatorIcEELi1ELb1EEC2B7v160006ENS_18__default_init_tagE, symObjAddr: 0x994, symBinAddr: 0x100001BF0, symSize: 0x2C }
+  - { offsetInCU: 0x5BAB, offset: 0x5BAB, size: 0x8, addend: 0x0, symName: __ZNSt3__19allocatorIcEC2B7v160006Ev, symObjAddr: 0x9C0, symBinAddr: 0x100001C1C, symSize: 0x2C }
+  - { offsetInCU: 0x5BD3, offset: 0x5BD3, size: 0x8, addend: 0x0, symName: __ZNSt3__116__non_trivial_ifILb1ENS_9allocatorIcEEEC2B7v160006Ev, symObjAddr: 0x9EC, symBinAddr: 0x100001C48, symSize: 0x14 }
   - { offsetInCU: 0x47BF, offset: 0xA3D3, size: 0x8, addend: 0x0, symName: __ZN9InventoryC2Ev, symObjAddr: 0x0, symBinAddr: 0x100001C8C, symSize: 0x3C }
   - { offsetInCU: 0x47EE, offset: 0xA402, size: 0x8, addend: 0x0, symName: __ZN9InventoryC1Ev, symObjAddr: 0x70, symBinAddr: 0x100001CC8, symSize: 0x2C }
   - { offsetInCU: 0x4818, offset: 0xA42C, size: 0x8, addend: 0x0, symName: __ZN9InventoryC2ENSt3__112basic_stringIcNS0_11char_traitsIcEENS0_9allocatorIcEEEEjj, symObjAddr: 0x9C, symBinAddr: 0x100001CF4, symSize: 0x80 }
