--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,5 +108,6 @@
         "__verbose_abort": "cpp",
         "__tree": "cpp"
     },
-    "C_Cpp.default.compilerPath": "/usr/bin/clang++"
+    "C_Cpp.default.compilerPath": "/usr/bin/clang++",
+    "C_Cpp.errorSquiggles": "disabled"
 }
